feat: Add FastAPI analytics service integration to C# backend
- Implemented AnalyzeRequest model to encapsulate file and metadata inputs
- Used MultipartFormDataContent to stream person A and B JSON files to FastAPI
- Set appropriate content headers for file and string parts
- Sent POST request to /analyze endpoint and handled response
- Enabled dynamic API key and base address configuration via HttpClient
- Validated successful data transmission using both direct curl and backend requests

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ Desktop.ini
 # VS Code settings
 .vscode/
 .history/
+.vs/
 
 # Coverage reports
 coverage/
@@ -52,5 +53,10 @@ coverage/
 tmp/
 temp/
 *.tmp
+
+# C# Visual Studio 2022
+*.suo
+bin/
+obj/ 
 
 # IDE files
