Integration tests done. Fixed Analytics Response parsing. There was error due to DTOs not assigned with JSON property name

--- a/WanderSyncBackend/WanderSync.Tests/WanderSync.Tests.csproj
+++ b/WanderSyncBackend/WanderSync.Tests/WanderSync.Tests.csproj
@@ -28,10 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="TestData\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <None Update="TestData\malformed.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="TestData\person_a.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
