--- a/WanderSyncBackend/WanderSync.Application/WanderSync.Application.csproj
+++ b/WanderSyncBackend/WanderSync.Application/WanderSync.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
